background: fixed background issue with broken css in body

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -180,9 +180,6 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: 100% 410px;
-  background-repeat: no-repeat;
-  background-position: 0px 65px;
   
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
