--- a/assets/css/kitanda.css
+++ b/assets/css/kitanda.css
@@ -1,5 +1,7 @@
 .kitanda_main_header {
   background: url(../../images/background_lighter_bourse_radial_gradient.png);
+  background-position: 0px 65px;
+  background-size: 100% 410px;
   background-repeat: no-repeat;
 }
 
